--- a/project_2/Makefile
+++ b/project_2/Makefile
@@ -6,6 +6,7 @@ DATA_POOL=$(ROOT_PATH)/data_pool
 LIB=$(ROOT_PATH)/lib/include
 PLUGIN=$(ROOT_PATH)/plugin
 CONF=$(ROOT_PATH)/conf
+WINDOW=$(ROOT_PATH)/window
 
 SERVER_BIN=udp_server
 CLIENT_BIN=udp_client
@@ -13,10 +14,11 @@ CLIENT_BIN=udp_client
 INCLUDE=-I$(COMM)
 INCLUDE+=-I$(DATA_POOL)
 INCLUDE+=-I$(LIB)
+INCLUDE+=-I$(WINDOW)
 
 CC=g++
 FLAGS=
-LDFLAGS=-lpthread#-static
+LDFLAGS=-lpthread -lncurses#-static
 
 SER_SRC=$(shell  ls -r $(SERVER) | grep -E '*.cpp')
 SER_SRC+=$(shell ls -r $(COMM) | grep -E '*.cpp')
@@ -25,6 +27,7 @@ SER_OBJ=$(SER_SRC:.cpp=.o)
 
 CLI_SRC=$(shell  ls -r $(CLIENT) | grep -E '*.cpp')
 CLI_SRC+=$(shell ls -r $(COMM) | grep -E '*.cpp')
+CLI_SRC+=$(shell ls -r $(WINDOW) | grep -E '*.cpp')
 CLI_OBJ=$(CLI_SRC:.cpp=.o)
 
 
@@ -40,6 +43,9 @@ $(CLIENT_BIN):$(CLI_OBJ)
 	$(CC) -c $< $(INCLUDE) 
 
 %.o:$(DATA_POOL)/%.cpp
+	$(CC) -c $< $(INCLUDE)
+
+%.o:$(WINDOW)/%.cpp
 	$(CC) -c $< $(INCLUDE)
 
 %.o:$(SERVER)/%.cpp
